# xhec-mlops-crashcourse-2024

./: .pre-commit-config.yaml  PREREQUISITES.md  README.md  main.py  pyproject.toml  requirements.txt
lessons/00-intro/: README.md  practice-intro-subject.ipynb  requirements.txt  temp.md
lessons/00-intro/best-practices/: best_practices_guide.md  requirements.in  requirements.txt
lessons/00-intro/best-practices/data/: phone_list.csv
lessons/00-intro/best-practices/lib/: hello_world.py
lessons/01-model-and-experiment-management/: README.md  practice-experiment-tracking-subject.ipynb  requirements.txt
lessons/02-model-deployment/: Dockerfile.app  README.md
lessons/02-model-deployment/fast_api_tutorial/: fast_api_tutorial.md
lessons/02-model-deployment/solution/web_service/: app_config.py  main.py  run_solution.sh
lessons/02-model-deployment/solution/web_service/lib/: modelling.py  preprocessing.py  utils.py
lessons/03-pipeline-and-orchestration/: README.md  orchestration.ipynb  requirements.txt
lessons/03-pipeline-and-orchestration/lib/: helpers.py
lessons/03-pipeline-and-orchestration/solution/: helpers.py  preprocessing.py  workflows.py
lessons/best-practices/: .pre-commit-config.yaml  best_practices_guide.md  pyproject.toml
lessons/best-practices/.github/workflows/: ci.yaml
lessons/best-practices/lib/: hello_world.py
