[project]
name = "xhec-mlops-crashcourse-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "seaborn==0.12.2",
  "scikit-learn==1.5.2",
  "ipykernel==6.25.2",
  "pandas==2.1.1",
  "loguru==0.7.2",
  "mlflow==2.7.1",
  "pydantic>=1,<2",
  "uvicorn==0.23.2",
  "fastapi==0.103.2",
  "prefect==2.13.7",
  "griffe<1.0.0",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "nbstripout>=0.8.1",
  "pip-tools>=7.5.0",
  "pre-commit==4.2.0",
  "ruff>=0.12.11",
]

[tool.ruff]
line-length = 130
